--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "tss-react": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
